--- a/NFTB.Mobile/NFTB.Mobile/UI/Content/Styles.xaml
+++ b/NFTB.Mobile/NFTB.Mobile/UI/Content/Styles.xaml
@@ -15,17 +15,25 @@
     <Style x:Key="filter" TargetType="Grid">
         <Setter Property="HorizontalOptions" Value="CenterAndExpand"></Setter>
         <Setter Property="Padding" Value="10,0,10,0"></Setter>
+        <Setter Property="Margin" Value="0,0,0,10"></Setter>
+        <Setter Property="BackgroundColor" Value="Black"></Setter>
     </Style>
 
             <Style x:Key="list-view-item" TargetType="StackLayout">
         <Setter Property="HorizontalOptions" Value="CenterAndExpand"></Setter>
         <Setter Property="VerticalOptions" Value="CenterAndExpand"></Setter>
-        <Setter Property="Margin" Value="0,0,0,10"></Setter>
+        <Setter Property="Margin" Value="0,0,0,5"></Setter>
         <Setter Property="Padding" Value="10"></Setter>
         <Setter Property="BackgroundColor" Value="{StaticResource main-color-light}"></Setter>
     </Style>
 
-    <Style x:Key="h1" TargetType="Label">
+    <Style x:Key="page-title" TargetType="Label">
+        <Setter Property="FontSize" Value="24"></Setter>
+        <Setter Property="TextColor" Value="White"></Setter>
+        <Setter Property="VerticalOptions" Value="Center"></Setter>
+    </Style>
+
+            <Style x:Key="h1" TargetType="Label">
         <Setter Property="FontSize" Value="20"></Setter>
         <Setter Property="TextColor" Value="{StaticResource main-color-comp}"></Setter>
         <Setter Property="VerticalOptions" Value="Center"></Setter>
@@ -36,7 +44,7 @@
     </Style>
 
     <Style x:Key="main" TargetType="StackLayout">
-        <Setter Property="Padding" Value="0,10,0,0"></Setter>
+        <Setter Property="Padding" Value="0,0,0,0"></Setter>
         <Setter Property="HorizontalOptions" Value="FillAndExpand"></Setter>
         <Setter Property="VerticalOptions" Value="FillAndExpand"></Setter>
         <Setter Property="BackgroundColor" Value="{StaticResource main-color}"></Setter>
