--- a/NFTB.Mobile/NFTB.Mobile/UI/Navigation/MasterMenu.xaml
+++ b/NFTB.Mobile/NFTB.Mobile/UI/Navigation/MasterMenu.xaml
@@ -6,17 +6,17 @@
                   Title="Menu">
   <MasterDetailPage.Master>
     <ContentPage Title="Menu">
-      <StackLayout Orientation="Vertical" BackgroundColor="{StaticResource main-color}">
-          <StackLayout HorizontalOptions="CenterAndExpand">
-              <Label Text="Put yo title here"></Label>
-          </StackLayout>
+      <StackLayout Orientation="Vertical" BackgroundColor="{StaticResource main-color}" Padding="10,50,10,50">
+            <Label Style="{StaticResource page-title}" > FOR THE BOYS</Label>  
                 <Button BackgroundColor="{StaticResource main-color-offset}"  Text ="Terms" TextColor="{StaticResource main-color}" Command="{Binding OnTermList}"/>
                 <Button BackgroundColor="{StaticResource main-color-offset}" Text ="Players" TextColor="{StaticResource main-color}" Command="{Binding OnPlayerList}"/>
                 <Button BackgroundColor="{StaticResource main-color-offset}" Text ="Attendance" TextColor="{StaticResource main-color}" Command="{Binding OnAttendanceList}"/>
-      </StackLayout>
+          <Label Text="{Binding Test}"></Label>
+
+            </StackLayout>
     </ContentPage>
   </MasterDetailPage.Master>
-  <MasterDetailPage.Detail>
+    <MasterDetailPage.Detail>
 
-  </MasterDetailPage.Detail>
+    </MasterDetailPage.Detail>
 </MasterDetailPage>
