--- a/NFTB.Mobile/NFTB.Mobile/UI/Pages/PlayerList.xaml
+++ b/NFTB.Mobile/NFTB.Mobile/UI/Pages/PlayerList.xaml
@@ -7,43 +7,39 @@
              x:Class="NFTB.Mobile.UI.Pages.PlayerList"
              Title="Player list">
 
-    <StackLayout Style="{StaticResource main}">
-        <!--<StackLayout Orientation="Horizontal" HorizontalOptions="Fill" BackgroundColor="Blue">-->
-        <Grid Style="{StaticResource filter}">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*"></ColumnDefinition>
-                    <ColumnDefinition Width="10*"></ColumnDefinition>
-                    <ColumnDefinition Width="*"></ColumnDefinition>
-                </Grid.ColumnDefinitions>
 
-            <Picker x:Name="PlayerListFilter" ItemsSource="{Binding TestList}" IsVisible="False">
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"></RowDefinition>
+        </Grid.RowDefinitions>
 
-            </Picker>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"></ColumnDefinition>
+        </Grid.ColumnDefinitions>
 
-            <Label Text="Filter was there a thing in the majigy yoza hey hey" HorizontalOptions="Center" Grid.Column="1"></Label>
-
-            <Image Source="icon.png" HorizontalOptions="End" Grid.Column="2">
-                <Image.GestureRecognizers>
-                    <TapGestureRecognizer Command="{Binding OnFilterTapped}">
-
-                    </TapGestureRecognizer>
-                </Image.GestureRecognizers>
+        <StackLayout Style="{StaticResource main}" Grid.Row="0" Grid.Column="0">
 
 
-            </Image>
-            </Grid>
+            <ListView x:Name="PlayerListView"
+                      ItemsSource="{Binding PlayerList}"
+                      HasUnevenRows="True"
+                      IsPullToRefreshEnabled="True"
+                      RefreshCommand="{Binding OnGetPlayers}"
+                      IsRefreshing="{Binding IsBusy}"
+                      SelectedItem="{Binding SelectedPlayer}"
+                      HorizontalOptions="FillAndExpand"
+                      VerticalOptions="FillAndExpand"
+                      
+            >
 
-        <!--</StackLayout>-->
-
-        <ListView x:Name="PlayerListView" ItemsSource="{Binding PlayerList}" HasUnevenRows="True" IsPullToRefreshEnabled="True" RefreshCommand="{Binding OnGetPlayers}" IsRefreshing="{Binding IsBusy}">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <ViewCell>
-                            <ViewCell.ContextActions>
-                                <MenuItem Command="{Binding Path=BindingContext.OnEditPlayer, Source={x:Reference PlayerListView}}" CommandParameter="{Binding .}" Text="Edit" />
+                            <!--<ViewCell.ContextActions>
+                                <MenuItem Command="{Binding Path=BindingContext.OnEditPlayer, Source={x:Reference PlayerListView}}" CommandParameter="{Binding Source={x:Reference PlayerListView}, Path=BindingContext.SelectedPlayer}" Text="Edit" />
                                 <MenuItem  Command="{Binding Path=BindingContext.OnDeletePlayer, Source={x:Reference PlayerListView}}" CommandParameter="{Binding .}" Text="Delete" />
 
-                            </ViewCell.ContextActions>
+                            </ViewCell.ContextActions>-->
                             <StackLayout Style="{StaticResource list-view-item}">
                                 <Grid>
                                     <Grid.RowDefinitions>
@@ -64,8 +60,27 @@
                         </ViewCell>
                     </DataTemplate>
                 </ListView.ItemTemplate>
+
             </ListView>
-        <Button Text="Test" Command="{Binding OnPop}"></Button>
-  </StackLayout>
-  
+
+        </StackLayout>
+        <!--Bottom right buttons-->
+        <AbsoluteLayout Grid.Row="0" Grid.Column="0">
+            <Image Source="add.png" AbsoluteLayout.LayoutBounds="0.9,0.9" AbsoluteLayout.LayoutFlags="PositionProportional">
+                <Image.GestureRecognizers>
+                    <TapGestureRecognizer Command="{Binding OnEditPlayer}" />
+                </Image.GestureRecognizers>
+            </Image>
+        </AbsoluteLayout>
+
+
+    </Grid>
+
+
+
+
+
+
+
+
 </ContentPage>
