--- a/NFTB.Mobile/NFTB.Mobile/UI/Pages/TermDetail.xaml
+++ b/NFTB.Mobile/NFTB.Mobile/UI/Pages/TermDetail.xaml
@@ -4,9 +4,10 @@
              xmlns:xfg="clr-namespace:XFGloss;assembly=XFGloss"
              xmlns:test="clr-namespace:NFTB.Mobile.UI.Pages;assembly=NFTB.Mobile"
              xmlns:components="clr-namespace:NFTB.Mobile.UI.Components;assembly=NFTB.Mobile"
-             x:Class="NFTB.Mobile.UI.Pages.TermDetails">
+             x:Class="NFTB.Mobile.UI.Pages.TermDetail">
 
     <StackLayout Style="{StaticResource main}">
+        
             
     </StackLayout>
   
