--- a/NFTB.Mobile/NFTB.Mobile/UI/Content/Styles.xaml
+++ b/NFTB.Mobile/NFTB.Mobile/UI/Content/Styles.xaml
@@ -2,83 +2,101 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:controls="clr-namespace:NFTB.Mobile.UI.Controls;assembly=NFTB.Mobile"
              x:Class="NFTB.Mobile.UI.Content.Styles">
-  <ContentPage.Resources>
-    <ResourceDictionary>
+    <ContentPage.Resources>
+        <ResourceDictionary>
 
-      <controls:NegateBoolean x:Key="Negate"></controls:NegateBoolean>
-        
-      <Color x:Key="main-color">#15141A</Color>
-      <Color x:Key="main-color-light">#1D1B24</Color>
-      <Color x:Key="main-color-comp">#B27F25</Color>
-      <Color x:Key="main-color-offset">#FFFFFF</Color>
+            <controls:NegateBoolean x:Key="Negate"></controls:NegateBoolean>
 
-    <Style x:Key="filter" TargetType="Grid">
-        <Setter Property="HorizontalOptions" Value="CenterAndExpand"></Setter>
-        <Setter Property="Padding" Value="10,0,10,0"></Setter>
-        <Setter Property="Margin" Value="0,0,0,10"></Setter>
-        <Setter Property="BackgroundColor" Value="Black"></Setter>
-    </Style>
+            <Color x:Key="main-color">#15141A</Color>
+            <Color x:Key="main-color-light">#1D1B24</Color>
+            <Color x:Key="main-color-comp">#B27F25</Color>
+            <Color x:Key="main-color-offset">#FFFFFF</Color>
+            <Color x:Key="primary">#006600</Color>
+
+
+            <Style x:Key="filter" TargetType="Grid">
+                <Setter Property="HorizontalOptions" Value="CenterAndExpand"></Setter>
+                <Setter Property="Padding" Value="10,0,10,0"></Setter>
+                <Setter Property="Margin" Value="0,0,0,10"></Setter>
+                <Setter Property="BackgroundColor" Value="Black"></Setter>
+            </Style>
 
             <Style x:Key="list-view-item" TargetType="StackLayout">
-        <Setter Property="HorizontalOptions" Value="CenterAndExpand"></Setter>
-        <Setter Property="VerticalOptions" Value="CenterAndExpand"></Setter>
-        <Setter Property="Margin" Value="0,0,0,5"></Setter>
-        <Setter Property="Padding" Value="10"></Setter>
-        <Setter Property="BackgroundColor" Value="{StaticResource main-color-light}"></Setter>
-    </Style>
+                <Setter Property="HorizontalOptions" Value="CenterAndExpand"></Setter>
+                <Setter Property="VerticalOptions" Value="CenterAndExpand"></Setter>
+                <Setter Property="Margin" Value="0,0,0,5"></Setter>
+                <Setter Property="Padding" Value="10"></Setter>
+                <Setter Property="BackgroundColor" Value="{StaticResource main-color-light}"></Setter>
+            </Style>
 
-    <Style x:Key="page-title" TargetType="Label">
-        <Setter Property="FontSize" Value="24"></Setter>
-        <Setter Property="TextColor" Value="White"></Setter>
-        <Setter Property="VerticalOptions" Value="Center"></Setter>
-    </Style>
+            <Style x:Key="page-title" TargetType="Label">
+                <Setter Property="FontSize" Value="24"></Setter>
+                <Setter Property="TextColor" Value="White"></Setter>
+                <Setter Property="VerticalOptions" Value="Center"></Setter>
+            </Style>
+
+            <Style x:Key="form-buttons" TargetType="StackLayout">
+                <Setter Property="HorizontalOptions" Value="FillAndExpand"></Setter>
+                <Setter Property="Margin" Value="0,20,0,0"></Setter>
+                <Setter Property="Orientation" Value="Horizontal"></Setter>
+            </Style>
+
+            <Style x:Key="form-switch" TargetType="StackLayout">
+                <Setter Property="HorizontalOptions" Value="FillAndExpand"></Setter>
+                <Setter Property="Orientation" Value="Horizontal"></Setter>
+            </Style>
+
+            <Style x:Key="btn-primary" TargetType="Button">
+                <Setter Property="BackgroundColor" Value="{StaticResource primary}"></Setter>
+                <Setter Property="TextColor" Value="White"></Setter>
+            </Style>
 
             <Style x:Key="h1" TargetType="Label">
-        <Setter Property="FontSize" Value="20"></Setter>
-        <Setter Property="TextColor" Value="{StaticResource main-color-comp}"></Setter>
-        <Setter Property="VerticalOptions" Value="Center"></Setter>
-    </Style>
+                <Setter Property="FontSize" Value="20"></Setter>
+                <Setter Property="TextColor" Value="{StaticResource main-color-comp}"></Setter>
+                <Setter Property="VerticalOptions" Value="Center"></Setter>
+            </Style>
 
-    <Style x:Key="h3" TargetType="Label" BasedOn="{StaticResource h1}">
-        <Setter Property="FontSize" Value="16"></Setter>
-    </Style>
+            <Style x:Key="h3" TargetType="Label" BasedOn="{StaticResource h1}">
+                <Setter Property="FontSize" Value="16"></Setter>
+            </Style>
 
-    <Style x:Key="main" TargetType="StackLayout">
-        <Setter Property="Padding" Value="0,0,0,0"></Setter>
-        <Setter Property="HorizontalOptions" Value="FillAndExpand"></Setter>
-        <Setter Property="VerticalOptions" Value="FillAndExpand"></Setter>
-        <Setter Property="BackgroundColor" Value="{StaticResource main-color}"></Setter>
-    </Style>
+            <Style x:Key="main" TargetType="StackLayout">
+                <Setter Property="Padding" Value="0,0,0,0"></Setter>
+                <Setter Property="HorizontalOptions" Value="FillAndExpand"></Setter>
+                <Setter Property="VerticalOptions" Value="FillAndExpand"></Setter>
+                <Setter Property="BackgroundColor" Value="{StaticResource main-color}"></Setter>
+            </Style>
 
-    <Style x:Key="title" TargetType="StackLayout">
-        <Setter Property="HorizontalOptions" Value="CenterAndExpand"></Setter>
-        <Setter Property="BackgroundColor" Value="Black"></Setter>
-    </Style>
+            <Style x:Key="title" TargetType="StackLayout">
+                <Setter Property="HorizontalOptions" Value="CenterAndExpand"></Setter>
+                <Setter Property="BackgroundColor" Value="Black"></Setter>
+            </Style>
 
-    <Style x:Key="form-label" TargetType="Label" BasedOn="{StaticResource h1}">
-        <Setter Property="FontSize" Value="16"></Setter>
-    </Style>
+            <Style x:Key="form-label" TargetType="Label" BasedOn="{StaticResource h1}">
+                <Setter Property="FontSize" Value="16"></Setter>
+            </Style>
 
-    <Style x:Key="form-entry" TargetType="Entry">
-        <Setter Property="FontSize" Value="14"></Setter>
-        <Setter Property="TextColor" Value="{StaticResource main-color-offset}"></Setter>
-    </Style>
+            <Style x:Key="form-entry" TargetType="Entry">
+                <Setter Property="FontSize" Value="14"></Setter>
+                <Setter Property="TextColor" Value="{StaticResource main-color-offset}"></Setter>
+            </Style>
 
-    <Style x:Key="form-date" TargetType="DatePicker">
-        <Setter Property="TextColor" Value="{StaticResource main-color-offset}"></Setter>
-    </Style>
+            <Style x:Key="form-date" TargetType="DatePicker">
+                <Setter Property="TextColor" Value="{StaticResource main-color-offset}"></Setter>
+            </Style>
 
             <!--Implicit styling-->
-    <Style TargetType="Label" BasedOn="{StaticResource h1}">
+            <Style TargetType="Label" BasedOn="{StaticResource h1}">
                 <Setter Property="TextColor" Value="{StaticResource main-color-offset}"></Setter>
                 <Setter Property="FontSize" Value="12"></Setter>
-    </Style>
+            </Style>
 
-    <Style TargetType="Entry">
-        <Setter Property="TextColor" Value="{StaticResource main-color-offset}"></Setter>
-        <Setter Property="FontSize" Value="12"></Setter>
-    </Style>
-        
-    </ResourceDictionary>
-  </ContentPage.Resources>
+            <Style TargetType="Entry">
+                <Setter Property="TextColor" Value="{StaticResource main-color-offset}"></Setter>
+                <Setter Property="FontSize" Value="12"></Setter>
+            </Style>
+
+        </ResourceDictionary>
+    </ContentPage.Resources>
 </ContentPage>
