--- a/NFTB.Mobile/NFTB.Mobile/UI/Pages/AttendanceDetail.xaml
+++ b/NFTB.Mobile/NFTB.Mobile/UI/Pages/AttendanceDetail.xaml
@@ -4,16 +4,10 @@
              xmlns:xfg="clr-namespace:XFGloss;assembly=XFGloss"
              xmlns:test="clr-namespace:NFTB.Mobile.UI.Pages;assembly=NFTB.Mobile"
              xmlns:components="clr-namespace:NFTB.Mobile.UI.Components;assembly=NFTB.Mobile"
-             x:Class="NFTB.Mobile.UI.Pages.TermDetail"
-             Title="Term details">
+             x:Class="NFTB.Mobile.UI.Pages.AttendanceDetail">
 
     <StackLayout Style="{StaticResource main}">
-        <Label Style="{StaticResource h1}" Text="{Binding Term.Name}"></Label>
-        <Label Style="{StaticResource h1}" Text="Expected amount from casuals"></Label>
-        <Label Style="{StaticResource h1}" Text="{Binding TermDetail.ExpectedAmountFromCasuals, Mode=TwoWay}"></Label>
-
-
-
+        
     </StackLayout>
   
 </ContentPage>
